<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculadoraActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/header3"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="413dp"
        android:layout_height="415dp"
        android:layout_marginTop="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn7"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn7"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn8"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn9"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btnMas"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btnMas"
                app:iconTint="#9A9A9A" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn4"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn4"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn5"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn6"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btnMenos"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btnMenos"
                app:iconTint="#9A9A9A" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn1"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn1"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn2"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn3"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btnMulti"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btnMulti"
                app:iconTint="#9A9A9A" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                app:cornerRadius="0dp"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btnBorrar"
                android:textAlignment="textStart"
                android:textColorLink="#9A9A9A"
                android:textSize="10sp"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                android:textSize="34sp"
                app:cornerRadius="0dp"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btn0"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btnIgual"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                app:cornerRadius="0dp"
                android:textSize="34sp"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btnIgual"
                app:iconTint="#9A9A9A" />

            <Button
                android:id="@+id/btnDivi"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_span="1"
                app:cornerRadius="0dp"
                android:textSize="34sp"
                android:backgroundTint="#9A9A9A"
                android:text="@string/btnDivi"
                app:iconTint="#9A9A9A" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#9A9A9A"
        android:onClick="Regresar"
        android:text="@string/btnRegresar"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:iconTint="#9A9A9A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="74dp"
        android:layout_height="54dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        android:text="@string/tvRes"
        android:textAlignment="textEnd"
        android:textIsSelectable="false"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>